welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:5: error: type mismatch;
 found   : Unit
 required: Boolean
	if(cpt=getMondeHauteur()*getMondeLargeur()) {
              ^